web/styles/settings.css
/* ... */
/* These have enough space for all the options in German. */
#user_desktop_icon_count_display,
#realm_desktop_icon_count_display,
#id_realm_waiting_period_threshold,
#id_realm_create_public_stream_policy,
#id_realm_create_private_stream_policy,
#id_realm_invite_to_stream_policy,
#id_realm_private_message_policy,
#id_realm_add_custom_emoji_policy,
#id_realm_user_group_edit_policy,
#id_realm_wildcard_mention_policy,
#id_realm_move_messages_between_streams_policy,
#id_realm_invite_to_realm_policy,
#id_realm_edit_topic_policy,
#id_realm_message_content_edit_limit_seconds,
#id_realm_delete_own_message_policy,
#id_realm_message_content_delete_limit_seconds,
#id_realm_move_messages_within_stream_limit_seconds,
#id_realm_move_messages_between_streams_limit_seconds,
#user_email_address_visibility,
#realm_email_address_visibility {
    width: 325px;
}

#id_realm_bot_creation_policy,
#id_realm_giphy_rating,
#id_realm_org_join_restrictions {
    width: 100%;
}

.dropdown-list-widget {
    button.dropdown-toggle {
        text-align: left;

        .fa-chevron-down {
            float: right;
            position: relative;
            top: 2px;
            padding-left: 5px;
            color: hsl(0, 0%, 58%);
            font-weight: lighter;
        }

        &.dropdown-toggle {
            /* Match settings for select elements. */
            padding: 4px 6px;

            span {
                line-height: 20px;
                height: 1.4em;
            }
        }

        &:disabled i {
            display: none;
        }
    }

    button.multiselect_btn {
        /* Matches the dropdown input margin so as to keep it aligned */
        margin-left: 9px;
        margin-top: 4px;
    }

    a.dropdown_list_reset_button {
        /* Prevent dark theme from overriding background. */
        background: unset !important;
        border: none;
        margin-left: 10px;

        &:disabled {
            display: none;
        }
    }

    .dropdown-search > input[type="text"] {
        margin: 9px;
    }

    .dropdown-menu {
        top: -7px; /* -(margin+padding), both are set by bootstrap. */
        bottom: auto;
    }

    .dropdown-list-wrapper {
        position: relative;
        height: auto;
        max-height: 200px;
        overflow-y: auto;
        margin-top: 0;
        display: block;
    }

    .dropdown-list-body {
        position: relative;
        margin-top: 0;
        display: block;

        /* In bootstrap v2.3.2, we strictly need
        .dropdown-menu > li > a as the order of the elements
        for the bootstrap style to be applied.
        Since we use a combination of dropdown + simplebar here,
        the structure cannot be possible since simplebar inserts
        elements of its own, so we copy over that style
        from bootstrap to here. */
        li a {
            display: block;
            padding: 3px 20px;
            clear: both;
            font-weight: normal;
            line-height: 20px;
            color: hsl(0, 0%, 20%);
            white-space: nowrap;

            &:hover {
                color: hsl(0, 0%, 100%);
                text-decoration: none;
                background-color: hsl(200, 100%, 38%);
                background-image: linear-gradient(
                    to bottom,
                    hsl(200, 100%, 40%),
                    hsl(200, 100%, 35%)
                );
            }
        }
    }
}

.subsection-failed-status p {
    background-color: hsl(0, 43%, 91%);
    padding: 2px 6px;
    border-radius: 4px;
    margin: 0 0 0 5px;
}

#muted_topics_table {
    width: 90%;
    margin: 0 auto;

    tbody {
        border-bottom: none;
    }
}

#admin-user-list .last_active {
    width: 100px;
}

.required-text {
    &:empty::after {
        content: attr(data-empty);
        display: block;

        font-style: italic;
        color: hsl(0, 0%, 67%);
    }

    &.thick:empty::after {
        width: 100%;
    }
}

#payload_url_inputbox,
#service_name_list {
    input[type="text"] {
        width: 340px;
    }
}

.dropdown-title {
    margin-bottom: 3px;
}

@supports (-moz-appearance: none) {
    #settings_page select {
        appearance: none;
        background: hsl(0, 0%, 100%) url("../images/dropdown.png") right / 20px
            no-repeat;
        padding-right: 20px;
    }
}

.profile-field-choices {
    display: inline-block;

    hr {
        margin-top: 0;
        margin-bottom: 5px;
    }

    .choice-row {
        margin-top: 8px;

        input {
            width: 190px;
        }

        button {
            margin-left: 2px;
        }
    }

    > .choice-row:first-of-type {
        margin-top: 0;
    }
}

.custom_user_field,
.bot_owner_user_field {
    .pill-container {
        padding: 2px 6px;
        min-height: 24px;
        max-width: 206px;
        background-color: hsl(0, 0%, 100%);

        &:focus-within {
            border-color: hsla(206, 80%, 62%, 0.8);
            outline: 0;
            outline: 1px dotted \9;

            box-shadow: inset 0 1px 1px hsla(0, 0%, 0%, 0.075),
                0 0 8px hsla(206, 80%, 62%, 0.6);
        }
    }
}

#get_api_key_button {
    display: block;
}

#attachment-stats-holder {
    position: relative;
    margin-top: 13px;
    display: inline-block;
}

.hide-org-settings {
    display: none;
}

.collapse-settings-btn {
    margin: 10px 0 0 10px;
    color: hsl(200, 100%, 40%);

    &:hover {
        cursor: pointer;
        color: hsl(208, 56%, 38%);
    }
}

#toggle_collapse {
    margin-left: 2px;
    display: inline-block;
}

.admin_exports_table {
    margin-bottom: 20px;
}
/* ... */

